# SquadMaprotaGenerator

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .prettierrc.js  CMakeLists.txt  Dockerfile  README.md  config.json  docker-compose.yml  install_boost.sh  main.js  optimizer_maps_history.json  optimizer_maps_history_AAS.json  optimizer_maps_history_AAS_1662668217656.json  optimizer_maps_history_Destruction.json  optimizer_maps_history_Destruction_1662668217656.json  optimizer_maps_history_Insurgency.json  optimizer_maps_history_Insurgency_1662668217656.json  optimizer_maps_history_Invasion.json  optimizer_maps_history_Invasion_1662668217656.json  optimizer_maps_history_RAAS.json  optimizer_maps_history_RAAS_1662668217656.json  optimizer_maps_history_TC.json  optimizer_maps_history_TC_1662668217656.json  package-lock.json  package.json  tsconfig.json
.github/workflows/: docker.yml  run.yml
data/: beautify.json  bioms.json  current_map_dist.json  current_map_dist.rota  data  delta.json  delta1.json  dist_progress.json  layers.json  layers.rota  layers_teams.json  maps_overwrite.json  mapweights.json  mapweights1.json  mode_distribution_overwrite.json  save.json  weight_formulas.json  weight_params.json
doku/: .gitignore  Anhang.tex  Ausblick.tex  Einleitung.tex  Ergebnisse.tex  Optimizer.tex  aufbau.tex  background.tex  bibtex.bib  main.tex  mapWeights.tex  titlepage.tex
doku/img/: generated_dist.pdf:Zone.Identifier  generated_dist.svg:Zone.Identifier  gleitender_mittelwert_biom_distanz.fig
doku/manual/: main.tex  new_map.tex  parameter.tex  quickstart.tex
include/: config.h  data.h  rotaLayer.h  rotaMap.h
lib/: CMakeLists.txt
optimizer_data/: dataToCsv.js  datacsv_1663104244759.csv
optimizer_data/1662925070070/: last_min_0ddee799-70ff-446d-a566-6372b220b82a_Insurgency.json  last_min_18ec7961-8b9f-4e51-9ac3-06db3be2eae6_Destruction.json  last_min_20a0df30-a9c9-42e3-a43a-ba5d2deae190_Invasion.json  last_min_4954ed61-e145-4643-b583-e7d599a14e8b_Destruction.json  last_min_4e16dd5d-9e87-4a24-b471-e24618625d3f_RAAS.json  last_min_56dec77e-d99e-4550-81e1-679af443cb94_TC.json  last_min_8c60821d-375f-45a6-baf3-85439fd2aae4_Invasion.json  last_min_a9fc93e2-e9c2-4e9d-a1d2-d4edd9443b20_AAS.json  last_min_eb191fb1-b617-4a50-a315-d5ad83111b79_AAS.json  last_min_f36f0450-0984-46de-8eb1-97317ff82ad1_Insurgency.json  last_min_f4532f2b-0fe7-4595-97c3-419477e94d62_RAAS.json  last_min_f5508ce8-9bd7-4bf1-866c-5d5f1e1fdd29_TC.json  mapweights_1662925070070.json  optimizer_maps_history_Destruction_18ec7961-8b9f-4e51-9ac3-06db3be2eae6.json  optimizer_maps_history_Destruction_4954ed61-e145-4643-b583-e7d599a14e8b.json  optimizer_maps_history_Insurgency_0ddee799-70ff-446d-a566-6372b220b82a.json  optimizer_maps_history_Insurgency_f36f0450-0984-46de-8eb1-97317ff82ad1.json  optimizer_maps_history_Invasion_20a0df30-a9c9-42e3-a43a-ba5d2deae190.json  optimizer_maps_history_Invasion_8c60821d-375f-45a6-baf3-85439fd2aae4.json  optimizer_maps_history_RAAS_4e16dd5d-9e87-4a24-b471-e24618625d3f.json  optimizer_maps_history_RAAS_f4532f2b-0fe7-4595-97c3-419477e94d62.json  optimizer_maps_history_TC_56dec77e-d99e-4550-81e1-679af443cb94.json  optimizer_maps_history_TC_f5508ce8-9bd7-4bf1-866c-5d5f1e1fdd29.json  run_info_0ddee799-70ff-446d-a566-6372b220b82a_Insurgency.json  run_info_18ec7961-8b9f-4e51-9ac3-06db3be2eae6_Destruction.json  run_info_4e16dd5d-9e87-4a24-b471-e24618625d3f_RAAS.json  run_info_8c60821d-375f-45a6-baf3-85439fd2aae4_Invasion.json  run_info_eb191fb1-b617-4a50-a315-d5ad83111b79_AAS.json  run_info_f5508ce8-9bd7-4bf1-866c-5d5f1e1fdd29_TC.json
optimizer_data/1662931510773/: last_min_06996ce5-ad77-4e81-a350-685781576511_Invasion.json  last_min_0857e7e8-34ef-4da5-9ee2-e795b645d166_TC.json  last_min_18f0ad2a-1e55-4aea-bc91-a05cf45b8cd6_Insurgency.json  last_min_2db33357-59d3-40ba-af39-3167b6bc6a26_RAAS.json  last_min_34dff1f8-2231-46a9-b042-9cc3ebc25614_RAAS.json  last_min_39264cab-983c-4fcc-9971-e68465d0263b_Destruction.json  last_min_5c347201-3145-4278-8154-eb75f0c1e955_Invasion.json  last_min_5ff8f641-bfab-46d5-9c1b-77c6e90bbbab_Destruction.json  last_min_6347bbea-5de6-40ab-84a5-a29077c203be_Insurgency.json  last_min_72ee1611-aae6-4446-b3ac-49e68addb499_AAS.json  last_min_83e3c035-bbfe-4186-ba6f-a9bb0bf7c50f_AAS.json  last_min_f8693b45-c522-4623-91f9-0f8fa145f946_TC.json  mapweights_1662931510773.json  optimizer_maps_history_AAS_72ee1611-aae6-4446-b3ac-49e68addb499.json  optimizer_maps_history_AAS_83e3c035-bbfe-4186-ba6f-a9bb0bf7c50f.json  optimizer_maps_history_Destruction_39264cab-983c-4fcc-9971-e68465d0263b.json  run_info_0857e7e8-34ef-4da5-9ee2-e795b645d166_TC.json  (+14 more)
src/: CMakeLists.txt  GlobalConfig.hpp.in  README.md  RotaConfig.hpp.in  biom.c  biom.h  config.c  config.h  data.c  data.h  data.js  generator.c  generator.h  generator.js  internes.md  io.c  io.h  main.c  metrics.js  optimizer.js  optimizer_parallel.js  optimizer_worker.js  rotaLayer.c  rotaLayer.h  rotaMap.c  rotaMap.h  rotaMode.h  statistics.c  statistics.h  statistics.js  utils.c  utils.h  utils.js  utils.ts
src/generator/: CMakeLists.txt  Config.cpp  Config.hpp  Generator.cpp  Generator.hpp  GlobalConfig.hpp  Maprota.cpp  Maprota.hpp  OptimizerData.hpp  RotaConfig.cpp  RotaConfig.hpp  RotaLayer.cpp  RotaLayer.hpp  RotaMap.cpp  RotaMap.hpp  RotaMode.cpp  RotaMode.hpp  RotaModePool.cpp  RotaModePool.hpp  RotaTeam.cpp  RotaTeam.hpp  dataParsing.cpp  dataParsing.hpp  main.cpp  utils.cpp  utils.hpp
src/optimizer/: CMakeLists.txt  OptimizerConfig.cpp  OptimizerConfig.hpp  OptimizerMain.cpp  RotaOptimizer.cpp  RotaOptimizer.hpp
src/qualification/basic/: CMakeLists.txt  basicRota_test.cpp  resetRota_test.cpp  utils_test.cpp
src/server/: CMakeLists.txt  RotaServer.cpp  RotaServer.hpp
visualization/: 3dmesh.py  3dscatter.py  layer_distribution.py  optimizer_maps_history.json  optimizer_maps_history_AAS_9732be4e-b882-480a-b0e1-3993a6c22d8a.json  optimizer_maps_history_AAS_eb191fb1-b617-4a50-a315-d5ad83111b79.json  optimizer_plot.py  requirements.txt  run_info_plot.py  utils.py  vote_impact.py  vote_impact_calc.py
(+869 files in other folders)
